--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ description = "10X cooking simulator"
 readme = "README.md"
 requires-python = ">=3.12"
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
@@ -20,3 +20,17 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/fredjaya/chickenpy"
 Issues = "https://github.com/fredjaya/chickenpy/issues"
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "black",
+    "isort"
+]
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
