MAINT: Ditch 2D RPG idea (moved to toy-rpg branch)
Try out simpler "merger" type idea. Clean dir, update uv, replace pygame
with pygame-ce.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "10X cooking simulator"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pygame>=2.6.1",
+    "pygame-ce>=2.5.2",
 ]
 
 [tool.ruff]
@@ -21,6 +21,5 @@ line-ending = "auto"
 
 [dependency-groups]
 dev = [
-    "pytest>=8.3.3",
     "ruff>=0.8.0",
 ]
